[metadata]
name = curtis
version = 0.3.dev0
author = Polyconseil
author_email = opensource+curtis@polyconseil.fr
url = http://github.com/polyconseil/curtis
description = A simple sentry cli
long_description = file: README.rst
license = BSD 3-Clause License
keywords = sentry, cli
classifiers =
        Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: System Administrators
        License :: OSI Approved :: BSD License
        Natural Language :: English
        Operating System :: OS Independent
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3 :: Only
        Topic :: Software Development :: Bug Tracking
        Topic :: System :: Logging
        Topic :: Terminals
        Topic :: Utilities

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    click
    requests
    termcolor

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    curtis = curtis.__main__:main

[flake8]
max-line-length = 120
exclude = build,dist,venv
max-complexity = 10

[zest.releaser]
create-wheel = yes
